--- a/supports-fig.tex
+++ b/supports-fig.tex
@@ -24,21 +24,21 @@
     minimum height = 3cm] (e) at (4.8,0) {};
 
 
-    \node[] (a1) at (-4.8,.8) {$a^S_1$};
-    \node[] (a2) at (-4.8,0) {$a^S_2$};
-    \node[] (a3) at (-4.8,-.8) {$a^S_3$};
+    \node[] (a1) at (-4.8,.8) {$a_1$};
+    \node[] (a2) at (-4.8,0) {$a_2$};
+    \node[] (a3) at (-4.8,-.8) {$a_3$};
 
-    \node[] (a1') at (-1.8,.8) {$a^T_1$};
-    \node[] (a2') at (-1.8,0) {$a^t_2$};
-    \node[] (a3') at (-1.8,-.8) {$a^T_3$};
+    \node[] (a1') at (-1.8,.8) {$b_1$};
+    \node[] (a2') at (-1.8,0) {$b_2$};
+    \node[] (a3') at (-1.8,-.8) {$b_3$};
 
-    \node[] (b1) at (4.8,.8) {$a^T_1$};
-    \node[] (b2) at (4.8,0) {$a^T_2$};
-    \node[] (b3) at (4.8,-.8) {$a^T_3$};
+    \node[] (b1) at (4.8,.8) {$b_1$};
+    \node[] (b2) at (4.8,0) {$b_2$};
+    \node[] (b3) at (4.8,-.8) {$b_3$};
 
-    \node[] (b1') at (1.8,.8) {$a^S_1$};
-    \node[] (b2') at (1.8,0) {$a^S_2$};
-    \node[] (b3') at (1.8,-.8) {$a^S_3$};
+    \node[] (b1') at (1.8,.8) {$a_1$};
+    \node[] (b2') at (1.8,0) {$a_2$};
+    \node[] (b3') at (1.8,-.8) {$a_3$};
 
     \node[] (label) at (-3.3, -2.1) {$S$ supports $T$};
     \node[] (label) at (3.3, -2.1) {$T$ covers $S$};
