--- a/commuting_fig.tex
+++ b/commuting_fig.tex
@@ -12,14 +12,13 @@
     \node[roundnode] (ChaseP) [node distance=3.0cm, below of=Phrase] {};
     \node[roundnode] (ChaseP') [node distance=6.0cm, right of=ChaseP] {};
 
-    \node[] (a1) at (-.5,-2.5) {$a^1_1$};
-    \node[] (a2) at (0.5,-2.5) {$a^1_2$};
-    \node[] (a3) at (0,-3.5) {$a^1_3$};
+    \node[] (a1) at (-.5,-2.5) {$a_1$};
+    \node[] (a2) at (0.5,-2.5) {$a_2$};
+    \node[] (a3) at (0,-3.5) {$a_3$};
 
-    \node[] (a1') at (5.5,-2.5) {$a^2_1$};
-    \node[] (a2') at (6.5,-2.5) {$a^2_2$};
-    \node[] (a3') at (6,-3.5) {$a^2_3$};
-    %\node[] (a4') at (6.5,-3.5) {a4'};
+    \node[] (a1') at (5.5,-2.5) {$b_1$};
+    \node[] (a2') at (6.5,-2.5) {$b_2$};
+    \node[] (a3') at (6,-3.5) {$b_3$};
 
     \node[] (ord) at (3,-1.3) {$\preceq$};
 
