--- a/ordered-system-fig.tex
+++ b/ordered-system-fig.tex
@@ -5,8 +5,8 @@
     \node[rectangle,
           draw,
           fill = yellow!30,
-          minimum width = 8cm, 
-          minimum height = 6cm] (r) at (0,0) {};
+          minimum width = 6cm, 
+          minimum height = 5cm] (r) at (0,-.4) {};
     \node[anchor=north] at (r.south) {Target};
     
     \node[rectangle,
@@ -55,8 +55,8 @@
     \node[rectangle,
     draw,
     fill = green!30,
-    minimum width = 5cm, 
-    minimum height = 0.75cm] (RoTM) at (0,-2.5) {};
+    minimum width = 3cm, 
+    minimum height = 0.5cm] (RoTM) at (0,-2.3) {};
     \node at (RoTM.center) {rtm};
 
 
